--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <header class="topbar">
         <div>
           <h1>RRG AI</h1>
-          <p>Simple local AI chat. Click Auto Connect, then just chat.</p>
+          <p>Local AI chat with web tools, file tools, image OCR, and recursive-adic retrieval.</p>
         </div>
         <div class="actions">
           <button id="new-session" class="ghost">New Chat</button>
@@ -42,6 +42,7 @@
                 <option value="download_url">Download from URL</option>
                 <option value="read_file">Read a local file</option>
                 <option value="find_files">Find text in local files</option>
+                <option value="analyze_image">Analyze an image (OCR)</option>
               </select>
               <button id="apply-quick-action" class="ghost">Use</button>
             </div>
@@ -61,6 +62,13 @@
                 <div class="row">
                   <input id="upload-file" type="file" />
                   <button id="upload-button" class="ghost">Upload File</button>
+                </div>
+                <div class="row">
+                  <input id="image-file" type="file" accept="image/*" />
+                  <button id="image-button" class="ghost">Analyze Image</button>
+                </div>
+                <div class="row">
+                  <input id="image-prompt" type="text" placeholder="Optional image question (example: summarize key text)" />
                 </div>
                 <div class="row">
                   <input id="ingest-url" type="text" placeholder="Website URL to read and remember" />
