Harden local privacy defaults and auto-auth backend access

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <header class="topbar">
         <div>
           <h1>RRG AI</h1>
-          <p>Local AI chat with web tools, file tools, image OCR, and recursive-adic retrieval.</p>
+          <p>Local AI chat with privacy-by-default (local backend, local data, no cloud required).</p>
         </div>
         <div class="actions">
           <button id="new-session" class="ghost">New Chat</button>
