Add codex-style local code generation, command execution, and test tools

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
                 <option value="read_file">Read a local file</option>
                 <option value="find_files">Find text in local files</option>
                 <option value="analyze_image">Analyze an image (OCR)</option>
+                <option value="run_tests">Run project tests</option>
+                <option value="run_command">Run a code command</option>
               </select>
               <button id="apply-quick-action" class="ghost">Use</button>
             </div>
